# algorithms

./: .gitignore  CMakeLists.txt  README.md  has_sum.c  has_sum.h  insertion_sort.c  linear_search.h  main.c  maximun_subarray.c  maximun_subarray.h  merge_buffer.c  merge_sort.c  merge_sort.h  non_zero.c  print_array.h  selection_sort.c  selection_sort.h
add_two_huge_numbers/: CMakeLists.txt  README.md  add_two_huge_numbers.c  add_two_huge_numbers.h  main.c
balance_parenthesis/: CMakeLists.txt  is_balanced.c  is_balanced.h  main.c
bits_insertion/: CMakeLists.txt  README.md  bits_insertion.c  bits_insertion.h  main.c
btree/: CMakeLists.txt  btree.c  btree.h
build_palindrome/: CMakeLists.txt  README.md  build_palindrome.c  build_palindrome.h  main.c
climbing_stairs/: CMakeLists.txt  README.md  climb_stairs.c  climb_stairs.h  main.c
closest_pairs/: CMakeLists.txt  README.md  closest_pairs.c  closest_pairs.h  main.c
common_character_count/: CMakeLists.txt  README.md  common_character_count.c  common_character_count.h  main.c
delete_duplicates/: CMakeLists.txt  README.md  delete_duplicates.c  delete_duplicates.h  main.c
detect_cycle/: CMakeLists.txt  README.md  detect_cycle.c  detect_cycle.h  list_node.c  list_node.h  main.c
diagonal_difference/: CMakeLists.txt  README.md  diagonal_difference.c  diagonal_difference.h  main.c
docs/: data-structures.drawio
dynamic_array/: CMakeLists.txt  README.md  main.c  seq_list.c  seq_list.h
factorial/: CMakeLists.txt  factorial.c  factorial.h
first_duplicate/: CMakeLists.txt  README.md  first_duplicate.c  first_duplicate.h  main.c
first_not_repeating_char/: CMakeLists.txt  README.md  first_not_repeating_char.c  first_not_repeating_char.h  main.c
greatest_common_divisor/: CMakeLists.txt  greatest_common_divisor.c  greatest_common_divisor.h
has_sum/: CMakeLists.txt  README.md  has_sum.c  has_sum.h  main.c
heap/: CMakeLists.txt  heap.c  heap.h  main.c
insertion_sort/: CMakeLists.txt  insertion_sort.h  (+1 more)
(+96 files in other folders)
