cmake_minimum_required(VERSION 3.7)
project(algorithms)

set(CMAKE_C_STANDARD 99)

add_subdirectory(print_array)
add_subdirectory(insertion_sort)
add_subdirectory(linear_search)
add_subdirectory(selection_sort)
add_subdirectory(merge_sort)
add_subdirectory(maximun_subarray)
add_subdirectory(merge_buffer)
add_subdirectory(non_zero)
add_subdirectory(has_sum)
add_subdirectory(num_set_bits)
add_subdirectory(detect_cycle)
add_subdirectory(list_node)
add_subdirectory(delete_duplicates)
add_subdirectory(diagonal_difference)
add_subdirectory(min_max_sum)
add_subdirectory(dynamic_array)
add_subdirectory(stack)
