cmake_minimum_required(VERSION 3.7)
project(algorithms)

set(CMAKE_C_STANDARD 99)

add_subdirectory(print_array)
add_subdirectory(insertion_sort)
add_subdirectory(linear_search)
add_subdirectory(selection_sort)
add_subdirectory(merge_sort)
add_subdirectory(maximun_subarray)
add_subdirectory(merge_buffer)
add_subdirectory(non_zero)
add_subdirectory(has_sum)
add_subdirectory(num_set_bits)
add_subdirectory(detect_cycle)
add_subdirectory(list_node)
add_subdirectory(delete_duplicates)
add_subdirectory(diagonal_difference)
add_subdirectory(min_max_sum)
add_subdirectory(dynamic_array)
add_subdirectory(stack)
add_subdirectory(balance_parenthesis)
add_subdirectory(first_duplicate)
add_subdirectory(btree)
add_subdirectory(first_not_repeating_char)
add_subdirectory(rotate_image)
add_subdirectory(line_bribes)
add_subdirectory(sudoku_check)
add_subdirectory(remove_k_from_list)
add_subdirectory(is_list_palindrome)
add_subdirectory(add_two_huge_numbers)
add_subdirectory(merge_two_linked_lists)
add_subdirectory(reverse_nodes_in_k_groups)
add_subdirectory(common_character_count)
add_subdirectory(climbing_stairs)
add_subdirectory(factorial)
add_subdirectory(greatest_common_divisor)
add_subdirectory(one_duplicate)
add_subdirectory(bits_insertion)
